# retro-pico-switch

./: .gitignore  CMakeLists.txt  LICENSE  N64.pio  N64Controller.cpp  N64Controller.h  README.md  SwitchDescriptors.cpp  SwitchDescriptors.h  n64_pico_switch.cpp  tusb_config.h
include/: BtStackUtils.h  Controller.h  GamecubeController.h  N64Controller.h  SwitchBluetooth.h  SwitchCommon.h  SwitchConsts.h  SwitchDescriptors.h  SwitchUsb.h  btstack_config.h  lwipopts.h  tusb_config.h
src/: CMakeLists.txt  main.cpp
src/otherController/: CMakeLists.txt  Controller.cpp  Controller.pio
src/otherController/gamecube/: CMakeLists.txt  GamecubeController.cpp
src/otherController/n64/: CMakeLists.txt  N64Controller.cpp
src/switchController/: CMakeLists.txt  SwitchBluetooth.cpp  SwitchCommon.cpp  SwitchDescriptors.cpp  SwitchUsb.cpp
